--- a/STARTCODEVERS1/src/main/webapp/css/style.css
+++ b/STARTCODEVERS1/src/main/webapp/css/style.css
@@ -1,5 +1,18 @@
 /* CSS stylesheet  for application */
 
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+
+html{
+    font-size: 62.5%;
+
+}
+
+
 table {
     border-collapse: collapse;
     border: 1px solid silver;
