Full Price Added

--- a/STARTCODEVERS1/src/main/webapp/css/viewcarportorder.css
+++ b/STARTCODEVERS1/src/main/webapp/css/viewcarportorder.css
@@ -43,6 +43,13 @@
 }
 
 
+.boldFontCarport{
+    font-size: 35px;
+    font-weight: bold;
+
+}
+
+
 .payButton{
     display: inline-block;
     text-decoration: none;
