Se Tegning works

--- a/STARTCODEVERS1/src/main/webapp/css/orderintro.css
+++ b/STARTCODEVERS1/src/main/webapp/css/orderintro.css
@@ -73,3 +73,16 @@
     background-color: #5e799f;
     color: white;
 }
+
+.divMinimizer{
+    max-width: 100px;
+}
+
+.buttonBoxOI{
+    max-width: 200px;
+    margin: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 2rem;
+    align-items: center;
+}
