--- a/STARTCODEVERS1/src/main/webapp/css/login.css
+++ b/STARTCODEVERS1/src/main/webapp/css/login.css
@@ -25,7 +25,7 @@
     margin-left: 27px;
     padding:1px;
 }
-#loginFlag-div, #loginFlag{
+.loginFlag{
     width: 650px;
     max-height: 400px;
     position:absolute;
